@@ -1,3 +1,4 @@
+Fixed: velocity and pressure hot spots are different sizes
 Fixed: colored fluid not being removed from model/view
 converted from Function<T,Void> to VoidFunction<T>
 # 0.00.03 (46334) Nov 18, 2010
